Change List to Arrays.asList